--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -465,4 +465,15 @@ body > nav ul:first-of-type li:nth-of-type(2) {
     right: calc(var(--spacing) + var(--scrollbar-width, 0px));
   }
 }
-/*# sourceMappingURL=pico.docs.min.css.map */
+
+form > label {
+  text-transform: capitalize;
+}
+
+form > fieldset > legend {
+  display: none;
+}
+
+form > fieldset > label {
+  text-transform: capitalize;
+}
