--- a/app/styles/summary-control.css
+++ b/app/styles/summary-control.css
@@ -1,7 +1,7 @@
 summary.with-control-button {
   display: grid;
-  gap: 1rem;
-  grid-template-columns: 6fr 1fr 1fr 2rem;
+  gap: 0.5rem;
+  grid-template-columns: 1fr auto auto auto;
 }
 
 /* If details is not open */
