--- a/app/styles/side-menu.css
+++ b/app/styles/side-menu.css
@@ -31,3 +31,18 @@ button#menu-toggle {
   top: 80px;
   left: 20px;
 }
+
+.background-menu-open {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: opacity 0.3s ease;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.background-menu-close {
+  opacity: 1;
+  pointer-events: all;
+}
