--- a/app/styles/side-menu.css
+++ b/app/styles/side-menu.css
@@ -23,6 +23,7 @@ aside.menu-close {
 
 aside.menu-open {
   left: 0;
+  z-index: 2;
 }
 
 button#menu-toggle { 
@@ -40,6 +41,7 @@ button#menu-toggle {
   height: 100%;
   transition: opacity 0.3s ease;
   background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
 
 .background-menu-close {
